chore(ci): make metrics check non-blocking

--- a/reports/sync-logs/2025-10-05-sync-run.md
+++ b/reports/sync-logs/2025-10-05-sync-run.md
@@ -31,3 +31,13 @@
 - CI trigger: not executed — `./scripts/wgx run ci` exits with `Fehlt: yq`
 - Notes: Environment lacks Docker runtime and outbound HTTPS to fetch binaries; cannot provision yq/gh/just offline.
 - Next action: Retry from workstation/devcontainer that has Docker (or pre-baked toolchain) and unrestricted access to required binaries.
+
+## Fleet roll-out — /ask (executed)
+- repos:
+  - weltgewebe
+  - hauski
+  - hauski-audio
+  - semantAH
+  - wgx
+  - tools
+- actions: sync + ci triggers
