fix: set lychee verbose flag as boolean

--- a/reports/sync-logs/2025-10-05-sync-run.md
+++ b/reports/sync-logs/2025-10-05-sync-run.md
@@ -63,7 +63,7 @@
      - .github/workflows/wgx-smoke.yml
      - .wgx/profile.yml
      - Justfile
-     - docs/adr/0000-template.md
+     - docs/adrs/0000-template.md
      - docs/runbooks/.keep
      - docs/wgx-konzept.md
  - hauski-audio
@@ -74,7 +74,7 @@
      - .github/workflows/wgx-smoke.yml
      - .wgx/profile.yml
      - Justfile
-     - docs/adr/0000-template.md
+     - docs/adrs/0000-template.md
      - docs/runbooks/.keep
      - docs/wgx-konzept.md
  - semantAH
@@ -85,7 +85,7 @@
      - .github/workflows/wgx-smoke.yml
      - .wgx/profile.yml
      - Justfile
-     - docs/adr/0000-template.md
+     - docs/adrs/0000-template.md
      - docs/runbooks/.keep
      - docs/wgx-konzept.md
  - tools
@@ -96,7 +96,7 @@
      - .github/workflows/wgx-smoke.yml
      - .wgx/profile.yml
      - Justfile
-     - docs/adr/0000-template.md
+     - docs/adrs/0000-template.md
      - docs/runbooks/.keep
      - docs/wgx-konzept.md
  - weltgewebe
@@ -107,7 +107,7 @@
      - .github/workflows/wgx-smoke.yml
      - .wgx/profile.yml
      - Justfile
-     - docs/adr/0000-template.md
+     - docs/adrs/0000-template.md
      - docs/runbooks/.keep
      - docs/wgx-konzept.md
  - wgx
@@ -118,6 +118,6 @@
      - .github/workflows/wgx-smoke.yml
      - .wgx/profile.yml
      - Justfile
-     - docs/adr/0000-template.md
+     - docs/adrs/0000-template.md
      - docs/runbooks/.keep
      - docs/wgx-konzept.md
